Increased the z-index of the openSEE menu to ensure it displays over other elements on the page.

--- a/src/PQDashboard/Content/OpenSEE.css
+++ b/src/PQDashboard/Content/OpenSEE.css
@@ -72,7 +72,7 @@ td {
 
 #menu .ui-accordion-content {
     font-size: 10px;
-    z-index: 1;
+    z-index: 999;
 }
 
 #menu .ui-accordion-content input {
